make emma changes

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       <div class='page-body'>
         <h2 class='page-title'>INQUIRE</h2>
         <div class='contact-grid'>
-          <div class='contact-grid-item'>
+          <div class='contact-grid-item contact-grid-text'>
 
             <section class='contact-section'>
               <span><strong>Questions:</strong>
@@ -68,7 +68,15 @@
                 <a href=''>SUBSCRIBE</a> to our email list
               </span>
               <span>
-                <a href=''>FOLLOW</a> us on social media
+                <a href='https://www.facebook.com/chekhovstudionyc/'>
+                  FACEBOOK
+                </a> |
+                <a href='https://www.instagram.com/chekhovstudionyc/'>
+                  INSTAGRAM
+                </a> |
+                <a href='https://twitter.com/chekhovstudioNY'>
+                  TWITTER
+                </a>
               </span>
             </section>
 
@@ -79,7 +87,7 @@
             </section>
           </div>
           <div class='contact-grid-item'>
-            <img class='contact-diagram' src='assets/diagram.jpeg'/>
+            <img class='contact-diagram' src='assets/images/diagram.jpeg'/>
           </div>
         </div>
       </div>
@@ -97,16 +105,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
