--- a/faculty.html
+++ b/faculty.html
@@ -39,6 +39,7 @@
             <h3 class='faculty-name'>
               AKIL APOLLO DAVIS
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             is a full time Performing Artist and Theatre Teacher. He teaches
             an extremely rare form of Mask work. Akil has received extensive
             training in 4 different forms of Balinese dance, 3 forms of Thai
@@ -53,6 +54,7 @@
             <h3 class='faculty-name'>
               DAWN ARNOLD
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             is the founder and Artistic Director of The Moving Dock Theatre
             Company and Chekhov Studio Chicago. Dawn is a teacher of the
             Chekhov Technique, trained by the Michael Chekhov Association
@@ -72,12 +74,14 @@
             <h3 class='faculty-name'>
               JAMES LUSE
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             .......TBD
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
               MELANIA  LEVISTKY
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             is a New York Based director, actor, singer, and teacher.
             She is the artistic director of NikitaBee productions, and
             the associate artistic director of Walking the Dog Theater
@@ -89,6 +93,7 @@
             <h3 class='faculty-name'>
               MEL SHRAWDER
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             has performed with the New York Shakespeare Festival under
             the direction of Joseph Papp, and has appeared at Arena Stage
             in Washington DC, Portland Stage, and other regional theatres.
@@ -115,6 +120,7 @@
             <h3 class='faculty-name'>
               SCOTT MILLER
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             Having spent forty years as a coach, trainer and teacher,
             Scott blends a lifetime of exceptional experience into his
             work with others. His diverse life paths include two sports
@@ -132,6 +138,7 @@
             <h3 class='faculty-name'>
               HUGO MOSS
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             Born in the U.K. and half Irish, has lived in Brazil for
             nearly 30 years. Recognizing how little Michael Chekhovs
             artistic legacy was known in Brazil, Michael Chekhov Brasil
@@ -153,12 +160,14 @@
             <h3 class='faculty-name'>
               MARJOLEIN BAARS
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             Amsterdam based director and acting teachers....TBD
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
               NATALIE YOLAN
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             Specialises in stage production and Russian theatrical
             pedagogics in Russia: in Moscow’s Gitis (the Russian Academy
             of Theatre Arts) and the Vakhtanghov Institute; her teachers
@@ -183,6 +192,7 @@
             <h3 class='faculty-name'>
               ULRICH MEYER-HORSCH
             </h3>
+            <img class='faculty-img' src='assets/images/akil.png' />
             Hamburg....TBD
           </div>
         </section>
@@ -202,16 +212,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
