--- a/lenard.html
+++ b/lenard.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -34,19 +35,21 @@
       <div class='page-body'>
         <h2 class='page-title'>LENARD PETIT</h2>
 
-        <section class='page-section'>
+        <section class='lenard-section'>
           <h2 class='studio-greeting'>
-            Michael Chekhov envisioned a new theatre with a heart. With
-            his approach actors are able to make heart connections with
-            the audience. It is self expression which is also real
-            communication, human being to human being. This is why I am
-            attracted to this work.
+            <em class='lenard-quote'>
+              "Michael Chekhov envisioned a new theatre with a heart. With
+              his approach actors are able to make heart connections with
+              the audience. It is self expression which is also real
+              communication, human being to human being. This is why I am
+              attracted to this work."
+            </em>
           </h2>
-          <div class='group lenard-attribution'>-- Lenard Petit</div>
+          <div class='group lenard-attribution'>— Lenard Petit</div>
         </section>
 
         <section class='page-section page-section-gray'>
-          <img class='image-float' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img class='image-float' src='assets/images/lenard.jpeg' />
           <div>
             Lenard Petit is one of a handful of teacher students trained
             by the original members of Michael Chekhov’s Theater School.
@@ -87,16 +90,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
