--- a/programs-old.html
+++ b/programs-old.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
+    <script src='assets/script.js' charset="utf-8"></script>
   </head>
   <body>
     <header>
@@ -32,9 +33,44 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <h2 class='page-title'>FRIENDS</h2>
-
-        
+        <div class='page-title'>PROGRAMS</div>
+        <div class='programs-container'>
+          <div class='programs-grid'>
+            <li class='program-card clear'>
+              <img class='programs-img' src='assets/images/programs.png'/>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>ART OF THE ACTOR</div>
+            </li>
+            <li class='program-card gold'>
+              <div class='program-card-title'>WORKSHOPS</div>
+            </li>
+            <li class='program-card gray'>
+              <div class='program-card-title'>CHEKHOV PERFORMANCE LAB</div>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>ARTIST SALON</div>
+            </li>
+            <li class='program-card black'>
+              <div class='program-card-title'>PRIVATE INSTRUCTION</div>
+            </li>
+            <li class='program-card gold'>
+              <div class='program-card-title'>MCAS AT LOTUS BAY</div>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>BEYOND NEW YORK</div>
+            </li>
+          </div>
+          <div class='programs-info'>
+            <div class='program-description'>
+              <!-- EMMA, LENARD, ETC: Edit the program descriptions in 'assets/script.js' -->
+            </div>
+          </div>
+          <div class='programs-calendar'>
+            <iframe src="https://calendar.google.com/calendar/embed?src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
+            style="border: 0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
