--- a/programs.html
+++ b/programs.html
@@ -35,24 +35,19 @@
       <div class='page-body'>
         <div class='page-title'>PROGRAMS</div>
         <div class='programs-container'>
+          <div class='art-of-the-actor'>ART OF THE ACTOR</div>
           <div class='programs-grid'>
-            <li class='program-card clear'>
-              <img class='programs-img' src='assets/programs.png'/>
-            </li>
-            <li class='program-card red'>
-              <div class='program-card-title'>ART OF THE ACTOR</div>
-            </li>
             <li class='program-card gold'>
               <div class='program-card-title'>WORKSHOPS</div>
             </li>
             <li class='program-card gray'>
               <div class='program-card-title'>CHEKHOV PERFORMANCE LAB</div>
             </li>
-            <li class='program-card red'>
-              <div class='program-card-title'>ARTIST SALON</div>
-            </li>
             <li class='program-card black'>
               <div class='program-card-title'>PRIVATE INSTRUCTION</div>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>ARTIST SALON</div>
             </li>
             <li class='program-card gold'>
               <div class='program-card-title'>MCAS AT LOTUS BAY</div>
@@ -86,16 +81,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
