--- a/studio.html
+++ b/studio.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -38,15 +39,6 @@
           <h2 class='studio-greeting'>Welcome to the Michael Chekhov Acting Studio, home to trainings
           and workshops based in the work of Michael Chekhov and Clowning
           for Actors since 1996, in New York City.</h2>
-          <p>
-            Text from Lenard to go here
-          </p>
-
-          <div class='group'>
-            <div>Sincerely,</div>
-            <div>Lenard Petit {signature script}</div>
-            <div>Artistic Director</div>
-          </div>
         </section>
 
         <section class='page-section video-grid'>
@@ -64,25 +56,31 @@
           </div>
         </section>
 
-        <nav class='page-section'>
+        <nav class=''>
           <li class='page-nav-item'>
+            <a href='lenard.html'>
             <label>LENARD PETIT</label>
-            <img src='assets/lenard.jpeg' />
+            <img src='assets/images/lenard.jpeg' />
+            </a>
           </li>
           <li class='page-nav-item'>
+            <a href='faculty.html'>
             <label>FACULTY</label>
-            <img src='assets/faculty.jpeg' />
+            <img src='assets/images/faculty.jpeg' />
+            </a>
           </li>
           <li class='page-nav-item'>
+            <a href='friends.html'>
             <label>FRIENDS OF THE STUDIO</label>
-            <img src='assets/friends.jpeg' />
+            <img src='assets/images/friends.jpeg' />
+            </a>
           </li>
         </nav>
 
         <section class='page-section'>
           <h3 class='section-header'>TESTIMONIALS</h3>
           <p>
-            <em>
+            <em class='studio-quote'>
               "This work has transformed me as an actor. It allows me to
               create without boundaries and is incredibly fun. I've never
               felt a sense of play as I do when using the Chekhov technique."
@@ -92,7 +90,7 @@
             </div>
           </p>
           <p>
-            <em>
+            <em class='studio-quote'>
               “The work feels like play, it exercises my focus and teaches
               me to trust my own instincts. In conjunction with the Alexander
               technique this work makes me aware of energy and how I can direct
@@ -103,7 +101,7 @@
             </div>
           </p>
           <p>
-            <em>
+            <em class='studio-quote'>
               “Mr. Lenard Petit is the real deal! During class, he is always
               calm, cool and collected. When he is teaching or sharing you
               see his passion, his love in the work.”
@@ -113,7 +111,7 @@
           </div>
           </p>
           <p>
-            <em>
+            <em class='studio-quote'>
               “I really appreciate the time taken with each student to ask
               questions, check-in, and process what is occurring for us as we
               encounter the work.”
@@ -123,7 +121,7 @@
           </div>
           </p>
           <p>
-            <em>
+            <em class='studio-quote'>
               "My imagination and sense of play are coming back to life!"
             </em>
             <div class='studio-quote-source'>
@@ -146,16 +144,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
