--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -31,7 +32,7 @@
     </header>
 
     <div id="primary" class="content-area">
-      <img class='home-banner' src='assets/homebanner.jpg'/>
+      <img class='home-banner' src='assets/images/homebanner.jpg'/>
       <div class='title'>
         <span class='title-name'>Michael Chekhov</span>
         <span class='title-red'>Acting</span>
@@ -60,16 +61,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
