--- a/philosophy.html
+++ b/philosophy.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -58,14 +59,6 @@
             rather parts of their unconscious, where dwell more universal
             and archetypal images.
           </p>
-          <p>
-            In this way the ego of the character is not subjected to the ego
-            of the actor, because the Individuality seeks a creative union
-            with the character, and will not allow the smaller personality
-            to invade the character thereby distorting this character into
-            one more representation of the actor's personality. The actor's
-            work continually becomes an artistic creation.
-          </p>
         </section>
 
         <section class='page-section'>
@@ -85,11 +78,19 @@
             </em>
           </p>
           <p class='phil-quote-source'>
-            (To The Actor by Michael Chekhov)
+            <em>(To The Actor by Michael Chekhov)</em>
           </p>
         </section>
 
         <section class='page-section page-section-gray'>
+          <p>
+            In this way the ego of the character is not subjected to the ego
+            of the actor, because the Individuality seeks a creative union
+            with the character, and will not allow the smaller personality
+            to invade the character thereby distorting this character into
+            one more representation of the actor's personality. The actor's
+            work continually becomes an artistic creation.
+          </p>
           <p>
             Michael Chekhov, Nephew of the famous writer and dramatist Anton Chekhov,
             was an ideal pupil of Constantine Stanislavsky and considered by
@@ -103,11 +104,11 @@
           </p>
         </section>
 
-        <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+        <section class='phil-image-grid'>
+          <img class='phil-img' src='assets/images/student1.jpeg' />
+          <img class='phil-img' src='assets/images/student2.jpeg' />
+          <img class='phil-img' src='assets/images/student3.jpeg' />
+          <img class='phil-img' src='assets/images/student1.jpeg' />
         </section>
 
         <section class='page-section page-section-gray'>
@@ -128,11 +129,11 @@
           </p>
         </section>
 
-        <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+        <section class='phil-image-grid'>
+          <img class='phil-img' src='assets/images/portrait1.jpeg' />
+          <img class='phil-img' src='assets/images/portrait2.jpeg' />
+          <img class='phil-img' src='assets/images/portrait3.jpeg' />
+          <img class='phil-img' src='assets/images/portrait4.jpeg' />
         </section>
 
         <section class='page-section page-section-clear'>
@@ -193,11 +194,11 @@
           </p>
         </section>
 
-        <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+        <section class='phil-image-grid'>
+          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
         </section>
 
         <section class='page-section page-section-gray'>
@@ -237,14 +238,14 @@
             call and see what they have in stock or can order.
           </p>
           <ul class='phil-grid'>
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
-            <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+            <img src='assets/images/book1.jpeg' />
+            <img src='assets/images/book2.jpeg' />
+            <img src='assets/images/book3.jpeg' />
+            <img src='assets/images/book4.jpeg' />
+            <img src='assets/images/book5.jpeg' />
+            <img src='assets/images/book6.jpeg' />
+            <img src='assets/images/book7.jpeg' />
+            <img src='assets/images/book8.jpeg' />
           </ul>
         </section>
       </div>
@@ -265,16 +266,16 @@
       </section>
       <section>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
-          <img src="assets/email.png" />
+          <img src="assets/images/email.png" />
         </a>
         <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/facebook.png" />
+          <img src="assets/images/facebook.png" />
         </a>
         <a href='https://www.instagram.com/chekhovstudionyc/' target='_blank'>
-          <img src="assets/instagram.png" />
+          <img src="assets/images/instagram.png" />
         </a>
         <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
-          <img src="assets/twitter.png" />
+          <img src="assets/images/twitter.png" />
         </a>
       </section>
     </footer>
