replace most philosophy images with edited versions

--- a/philosophy.html
+++ b/philosophy.html
@@ -108,7 +108,7 @@
           <img class='phil-img' src='assets/images/student1.jpeg' />
           <img class='phil-img' src='assets/images/student2.jpeg' />
           <img class='phil-img' src='assets/images/student3.jpeg' />
-          <img class='phil-img' src='assets/images/student1.jpeg' />
+          <img class='phil-img' src='assets/images/student4.jpeg' />
         </section>
 
         <section class='page-section page-section-gray'>
@@ -195,10 +195,10 @@
         </section>
 
         <section class='phil-image-grid'>
-          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
-          <img class='phil-img' src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img class='phil-img' src='assets/images/phil1.jpeg' />
+          <img class='phil-img' src='assets/images/phil2.jpeg' />
+          <img class='phil-img' src='assets/images/phil3.jpeg' />
+          <img class='phil-img' src='assets/images/phil4.jpeg' />
         </section>
 
         <section class='page-section page-section-gray'>
