update faculty list with available images

--- a/faculty.html
+++ b/faculty.html
@@ -37,24 +37,9 @@
         <section class='faculty-grid'>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              AKIL APOLLO DAVIS
-            </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
-            is a full time Performing Artist and Theatre Teacher. He teaches
-            an extremely rare form of Mask work. Akil has received extensive
-            training in 4 different forms of Balinese dance, 3 forms of Thai
-            Classical dance, Modern dance, Butoh, African, Ballet, Jazz,
-            Kabuki, and Noh. Akil has taught Theatre and Dance all over
-            America, in over 7 countries, 2 of which are regular and on-going
-            (Bali and Thailand), and is now a Professor of Mask and Art
-            Aesthetic at NYU and SUNY Purchase. He is also the Founder
-            and Artistic Director of the new performance company LOUDSOL.
-          </div>
-          <div class='faculty-card'>
-            <h3 class='faculty-name'>
               DAWN ARNOLD
             </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
+            <img class='faculty-img' src='assets/images/arnold.jpeg' />
             is the founder and Artistic Director of The Moving Dock Theatre
             Company and Chekhov Studio Chicago. Dawn is a teacher of the
             Chekhov Technique, trained by the Michael Chekhov Association
@@ -72,16 +57,24 @@
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              JAMES LUSE
+              AKIL APOLLO DAVIS
             </h3>
             <img class='faculty-img' src='assets/images/akil.png' />
-            .......TBD
+            is a full time Performing Artist and Theatre Teacher. He teaches
+            an extremely rare form of Mask work. Akil has received extensive
+            training in 4 different forms of Balinese dance, 3 forms of Thai
+            Classical dance, Modern dance, Butoh, African, Ballet, Jazz,
+            Kabuki, and Noh. Akil has taught Theatre and Dance all over
+            America, in over 7 countries, 2 of which are regular and on-going
+            (Bali and Thailand), and is now a Professor of Mask and Art
+            Aesthetic at NYU and SUNY Purchase. He is also the Founder
+            and Artistic Director of the new performance company LOUDSOL.
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
               MELANIA  LEVISTKY
             </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
+            <img class='faculty-img' src='assets/images/levitsky.jpeg' />
             is a New York Based director, actor, singer, and teacher.
             She is the artistic director of NikitaBee productions, and
             the associate artistic director of Walking the Dog Theater
@@ -91,9 +84,56 @@
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              MEL SHRAWDER
+              JAMES LUSE
             </h3>
             <img class='faculty-img' src='assets/images/akil.png' />
+            .......TBD
+          </div>
+          <div class='faculty-card'>
+            <h3 class='faculty-name'>
+              SCOTT MILLER
+            </h3>
+            <img class='faculty-img' src='assets/images/miller.jpeg' />
+            Having spent forty years as a coach, trainer and teacher,
+            Scott blends a lifetime of exceptional experience into his
+            work with others. His diverse life paths include two sports
+            at the professional level, a law degree from George Washington
+            University, clerking at DC’s Public Defender Service, time as
+            a producer, actor, director, a trainer of lead teachers.
+            He has been, for the last fifteen years, a Professor at NYU
+            Tisch’s elite Graduate Acting Program. He is the founder of
+            the Miller Voice Method® and through decades of field and
+            scientific research has developed a transformational and
+            repeatable way to embody presence and empathy for peak
+            performances that sustain both the audience’s and speaker’s attention.
+          </div>
+          <div class='faculty-card'>
+            <h3 class='faculty-name'>
+              HUGO MOSS
+            </h3>
+            <img class='faculty-img' src='assets/images/moss.jpeg' />
+            Born in the U.K. and half Irish, has lived in Brazil for
+            nearly 30 years. Recognizing how little Michael Chekhovs
+            artistic legacy was known in Brazil, Michael Chekhov Brasil
+            was founded in 2010 by Hugo Moss and Brazilian actor Thaís
+            Loureiro with the mission to fill the gap in the countrys
+            theatre education and practice. Trained by MICHA, Hugo is an
+            active member of the international Michael Chekhov community
+            and is director of Grupo Assik's acclaimed 2014 production of
+            'night, Mother, by Marsha Norman. He has recently been assisting
+            Jessica Cerullo in editing sections of Deirdre Hurst du Prey's
+            archive for MICHA's 2017 edition of "Lessons for Teachers",
+            and in 2016 was appointed Visiting Professor at the University
+            of Campinas to introduce the Michael Chekhov technique to
+            graduate, post-graduate students and faculty members. He finds
+            daily inspiration in the Alexander Technique and Eurythmy and
+            is fluent in Portuguese, German and French.
+          </div>
+          <div class='faculty-card'>
+            <h3 class='faculty-name'>
+              MEL SHRAWDER
+            </h3>
+            <img class='faculty-img' src='assets/images/shrawder.jpeg' />
             has performed with the New York Shakespeare Festival under
             the direction of Joseph Papp, and has appeared at Arena Stage
             in Washington DC, Portland Stage, and other regional theatres.
@@ -118,56 +158,9 @@
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
-              SCOTT MILLER
-            </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
-            Having spent forty years as a coach, trainer and teacher,
-            Scott blends a lifetime of exceptional experience into his
-            work with others. His diverse life paths include two sports
-            at the professional level, a law degree from George Washington
-            University, clerking at DC’s Public Defender Service, time as
-            a producer, actor, director, a trainer of lead teachers.
-            He has been, for the last fifteen years, a Professor at NYU
-            Tisch’s elite Graduate Acting Program. He is the founder of
-            the Miller Voice Method® and through decades of field and
-            scientific research has developed a transformational and
-            repeatable way to embody presence and empathy for peak
-            performances that sustain both the audience’s and speaker’s attention.
-          </div>
-          <div class='faculty-card'>
-            <h3 class='faculty-name'>
-              HUGO MOSS
-            </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
-            Born in the U.K. and half Irish, has lived in Brazil for
-            nearly 30 years. Recognizing how little Michael Chekhovs
-            artistic legacy was known in Brazil, Michael Chekhov Brasil
-            was founded in 2010 by Hugo Moss and Brazilian actor Thaís
-            Loureiro with the mission to fill the gap in the countrys
-            theatre education and practice. Trained by MICHA, Hugo is an
-            active member of the international Michael Chekhov community
-            and is director of Grupo Assik's acclaimed 2014 production of
-            'night, Mother, by Marsha Norman. He has recently been assisting
-            Jessica Cerullo in editing sections of Deirdre Hurst du Prey's
-            archive for MICHA's 2017 edition of "Lessons for Teachers",
-            and in 2016 was appointed Visiting Professor at the University
-            of Campinas to introduce the Michael Chekhov technique to
-            graduate, post-graduate students and faculty members. He finds
-            daily inspiration in the Alexander Technique and Eurythmy and
-            is fluent in Portuguese, German and French.
-          </div>
-          <div class='faculty-card'>
-            <h3 class='faculty-name'>
-              MARJOLEIN BAARS
-            </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
-            Amsterdam based director and acting teachers....TBD
-          </div>
-          <div class='faculty-card'>
-            <h3 class='faculty-name'>
               NATALIE YOLAN
             </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
+            <img class='faculty-img' src='assets/images/yalon.jpeg' />
             Specialises in stage production and Russian theatrical
             pedagogics in Russia: in Moscow’s Gitis (the Russian Academy
             of Theatre Arts) and the Vakhtanghov Institute; her teachers
@@ -187,13 +180,6 @@
             Dominique Thirion, Angel Vergara, Melanie Rullier, Anne-Cécile
             Vandalem, Alain Wathieu Boris Rabey, Matthias Langhoff,
             Isabelle Pousseur, Slava Kokorin.
-          </div>
-          <div class='faculty-card'>
-            <h3 class='faculty-name'>
-              ULRICH MEYER-HORSCH
-            </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
-            Hamburg....TBD
           </div>
         </section>
 
